--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - ${PHP_DEMO_WEB_PORT:-8000}:8000
     volumes:
       - .:/usr/src
+    entrypoint: /usr/src/entrypoint-dev
     command: php artisan serve --host=0.0.0.0 --port=8000
     depends_on:
       - mysql
@@ -60,10 +61,9 @@ services:
 
       APP_KEY: base64:5aoHpAok0Sjdq2Nhx44MvDzMcnAqZ/qzRxfHG++S8wU=
 
-      BROADCAST_DRIVER: log
-      CACHE_DRIVER: file
-      SESSION_DRIVER: file
-      QUEUE_DRIVER: sync
+      CACHE_DRIVER: redis
+      SESSION_DRIVER: redis
+      QUEUE_DRIVER: redis
 
       REDIS_HOST: redis
       REDIS_PASSWORD: null
