--- a/.gitignore
+++ b/.gitignore
@@ -3,13 +3,12 @@
 /public/storage
 /storage/*.key
 /vendor
-/.idea
-/.vagrant
+.env
+.phpunit.result.cache
 Homestead.json
 Homestead.yaml
 npm-debug.log
 yarn-error.log
-.env
-/database/dumps
-.*_hist*
-.composer
+
+# Ignore shell history files
+/.*_hist*
