--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@ yarn-error.log
 # Ignore compiled css/js files (Why doesn't laravel ignore these by default?)
 /public/css
 /public/js
+public/mix-manifest.json
+
+# Ignore node HOME artifacts:
+/.config
+/.npm
