--- a/benchmark-compose.yml
+++ b/benchmark-compose.yml
@@ -1,6 +1,3 @@
-# Other articles read on my research about laravel + Docker:
-#  - https://laravel-news.com/multi-stage-docker-builds-for-laravel
-#  - https://www.pascallandau.com/blog/php-php-fpm-and-nginx-on-docker-in-windows-10/
 version: "2.4"
 
 volumes:
@@ -27,36 +24,19 @@ services:
     networks: [ "backend" ]
 
   web: &app_base
-    image: docker-monterrey/php-demo:development
+    image: docker-monterrey/php-demo:latest
     build:
       context: .
       dockerfile: Dockerfile
-      target: development
+      target: release
       args:
       - DEVELOPER_UID=${UID:-1000}
       - DEVELOPER_USER=${USER:-you}
     networks: [ "backend", "frontend" ]
     ports:
     - ${PHP_DEMO_WEB_PORT:-8000}:8000
-    volumes:
-    # Mount our app code into the "/usr/src" folder at our app containers:
-    - .:/usr/src
-
-    # Replace the local 'node_modules' folder with a Docker volume, so we can
-    # run the frontend app either from the host (i.e. macOS) or using containers
-    # without having one or another clobbering the npm packages or conflicting
-    # versions for macOS / Linux:
-    - app_node_modules:/usr/src/node_modules
-
-    # Replace the local 'vendor' folder with another Docker volume, so we can
-    # run the frontend app either from the host (i.e. macOS) or using containers
-    # without having one or another clobbering the npm packages or conflicting
-    # versions for macOS / Linux:
-    - composer_vendor:/usr/src/vendor
-
-    entrypoint: /usr/src/bin/dev-entrypoint.sh
-    command: php artisan serve --host=0.0.0.0 --port=8000
-    depends_on: [ "mysql", "redis", "webpack" ]
+    command: web
+    depends_on: [ "mysql", "redis" ]
 
     # Keep the stdin open, so we can attach to our app container's process
     # and do things such as byebug, etc:
@@ -66,11 +46,10 @@ services:
     tty: true
 
     environment:
-      APP_ENV: development
+      APP_ENV: production
       APP_DEBUG: 'true'
       APP_LOG_LEVEL: debug
       APP_URL: http://localhost:8000
-
 
       APP_KEY: base64:5aoHpAok0Sjdq2Nhx44MvDzMcnAqZ/qzRxfHG++S8wU=
 
@@ -98,10 +77,3 @@ services:
       PUSHER_APP_ID:
       PUSHER_KEY:
       PUSHER_SECRET:
-
-  webpack:
-    <<: *app_base
-    ports: []
-    depends_on: []
-    # We can also use 'watch-poll' for those running on VirtualBox...
-    command: yarn run ${MIX_WATCH_TASK:-watch}
