Now it's workin'

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -36,7 +36,7 @@ http {
         listen <?php echo (getenv('PORT') ? getenv('PORT') : '8001'); ?>;
 
         server_name example.com;
-        root /example.com/public;
+        root /usr/src/public;
 
         add_header X-Frame-Options "SAMEORIGIN";
         add_header X-XSS-Protection "1; mode=block";
@@ -56,7 +56,7 @@ http {
         error_page 404 /index.php;
 
         location ~ \.php$ {
-            fastcgi_pass unix:/var/run/php/php-demo.sock;
+            fastcgi_pass unix:/usr/src/tmp/sockets/php-demo.sock;
             fastcgi_index index.php;
             fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
             include fastcgi_params;
