--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,7 @@ docker-compose.yml
 common-services.yml
 benchmark-compose.yml
 stack.yml
+.dockerignore
 
 # Ignore dotenv files
 /.env
@@ -28,3 +29,9 @@ stack.yml
 # Ignore node HOME artifacts:
 /.config
 /.npm
+
+# Ignore tmp
+/tmp/*
+
+# Prevent our custom 'bin/composer' script from making it to the build image:
+/bin/composer
