--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -8,7 +8,7 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 
-# user = www-data
+user = root
 
 # Set the pidfile path to somewhere 'www-data' can write to:
 pidfile=/usr/src/tmp/pids/supervisord.pid
@@ -22,7 +22,7 @@ stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 
 [program:php_fpm]
-command=php-fpm --fpm-config /usr/src/tmp/config/php-fpm.conf
+command=php-fpm --fpm-config /usr/local/etc/php-fpm.conf
 pidfile=/usr/src/tmp/pids/php-fpm.pid
 numprocs=1
 stdout_logfile=/dev/fd/1
