Updated practice (part 1) (#1)
* Updated stuff

* Ignore temporary folder contents

* Ignore compiled assets

* WIP

* Now it's workin'

* Fixed some stuff

* Now all works

* Corrected logging to stdout on PHP app

* Added php library 'phpunit-watcher'

* Updated Dockerfile with cleaned-up steps

* Added test container to development compose project

* Added artisan command 'db:create'

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,1 +1,37 @@
-/vendor/*
+Dockerfile
+docker-compose.yml
+common-services.yml
+benchmark-compose.yml
+stack.yml
+.dockerignore
+
+# Ignore dotenv files
+/.env
+
+# Ignore shell history files
+/.*_hist*
+
+# Ignore composer vendor directory:
+/vendor
+
+# Ignore the local node_modules entirely:
+/node_modules
+
+# Ignore git files
+/.git
+/.gitignore
+/.gitattributes
+
+# Ignore compiled css/js files
+/public/css
+/public/js
+
+# Ignore node HOME artifacts:
+/.config
+/.npm
+
+# Ignore tmp
+/tmp/*
+
+# Prevent our custom 'bin/composer' script from making it to the build image:
+/bin/composer
