--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - DEVELOPER_UID=${UID:-1000}
       - DEVELOPER_USER=${USER:-you}
     networks: [ "backend", "frontend" ]
-    depends_on: [ "mysql", "redis", "webpack" ]
+    depends_on: [ "mysql", "redis" ]
     volumes:
     # Mount our app code into the "/usr/src" folder at our app containers:
     - .:/usr/src
@@ -81,11 +81,7 @@ services:
       REDIS_PASSWORD: null
       REDIS_PORT: 6379
 
-      DB_CONNECTION: mysql
-      DB_HOST: mysql
-      DB_USERNAME: demo
-      DB_PASSWORD: 3x4mpl3P455w0rd
-      DB_DATABASE: demo_test
+      DATABASE_URL: mysql://demo:3x4mpl3P455w0rd@mysql:3306/demo_development
 
       LOG_CHANNEL: stdout
 
@@ -105,6 +101,7 @@ services:
     ports:
     - ${PHP_DEMO_WEB_PORT:-8000}:8000
     command: php artisan serve --host=0.0.0.0 --port=8000
+    depends_on: [ "mysql", "redis", "webpack" ]
     environment:
       <<: *app_env
       APP_ENV: development
