Fixed running as non-root user

--- a/config/supervisord.conf
+++ b/config/supervisord.conf
@@ -8,13 +8,11 @@ nodaemon=true
 logfile=/dev/null
 logfile_maxbytes=0
 
-user = root
-
 # Set the pidfile path to somewhere 'www-data' can write to:
 pidfile=/usr/src/tmp/pids/supervisord.pid
 
 [program:nginx]
-command=nginx -c /etc/nginx/nginx.conf
+command=nginx -c /usr/src/tmp/nginx.conf
 numprocs=1
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -22,7 +20,7 @@ stderr_logfile=/dev/fd/1
 stderr_logfile_maxbytes=0
 
 [program:php_fpm]
-command=php-fpm --fpm-config /usr/local/etc/php-fpm.conf
+command=php-fpm --fpm-config /usr/src/tmp/php-fpm.conf
 pidfile=/usr/src/tmp/pids/php-fpm.pid
 numprocs=1
 stdout_logfile=/dev/fd/1
