--- a/config/php-fpm.conf
+++ b/config/php-fpm.conf
@@ -157,8 +157,8 @@ log_limit = 8192
 ; Unix user/group of processes
 ; Note: The user is mandatory. If the group is not set, the default user's group
 ;       will be used.
-user = www-data
-group = www-data
+;user = www-data
+;group = www-data
 
 ; The address on which to accept FastCGI requests.
 ; Valid syntaxes are:
@@ -182,9 +182,9 @@ listen = /usr/src/tmp/sockets/php-demo.sock
 ; BSD-derived systems allow connections regardless of permissions.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0660
-listen.owner = www-data
-listen.group = www-data
-listen.mode = 0660
+;listen.owner = www-data
+;listen.group = www-data
+;listen.mode = 0660
 ; When POSIX Access Control Lists are supported you can set them using
 ; these options, value is a comma separated list of user/group names.
 ; When set, listen.owner and listen.group are ignored
