--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     networks: [ "backend" ]
 
   test: &app_base
-    image: docker-monterrey/php-demo:development
+    image: vovimayhem/docker-laravel-demo:development
     build:
       context: .
       dockerfile: Dockerfile
@@ -38,7 +38,7 @@ services:
       - DEVELOPER_UID=${UID:-1000}
       - DEVELOPER_USER=${USER:-you}
     networks: [ "backend", "frontend" ]
-    depends_on: [ "mysql", "redis", "webpack" ]
+    depends_on: [ "mysql", "redis" ]
     volumes:
     # Mount our app code into the "/usr/src" folder at our app containers:
     - .:/usr/src
@@ -77,15 +77,9 @@ services:
       SESSION_DRIVER: redis
       QUEUE_DRIVER: redis
 
-      REDIS_HOST: redis
-      REDIS_PASSWORD: null
-      REDIS_PORT: 6379
+      REDIS_URL: redis://redis:6379
 
-      DB_CONNECTION: mysql
-      DB_HOST: mysql
-      DB_USERNAME: demo
-      DB_PASSWORD: 3x4mpl3P455w0rd
-      DB_DATABASE: demo_test
+      DATABASE_URL: mysql://demo:3x4mpl3P455w0rd@mysql:3306/demo_development
 
       LOG_CHANNEL: stdout
 
@@ -105,6 +99,7 @@ services:
     ports:
     - ${PHP_DEMO_WEB_PORT:-8000}:8000
     command: php artisan serve --host=0.0.0.0 --port=8000
+    depends_on: [ "mysql", "redis", "webpack" ]
     environment:
       <<: *app_env
       APP_ENV: development
