--- a/staging-compose.yml
+++ b/staging-compose.yml
@@ -1,40 +1,27 @@
-version: "2.4"
-
-volumes:
-  mysql_data:
-  redis_data:
-  app_node_modules:
-  composer_vendor:
-
-networks:
-  backend:
-  frontend:
+# This file is an override to the default 'docker-compose.yml' file, and is
+# intended to be used in CI contexts (drone, github actions, semaphore, etc).
+#
+# The most important thing it does is re-uses the services defined in the main
+# file (docker-compose.yml) such as postgres, pubsub, etc.
+#
+# To make it work, be sure you use an alias for docker-compose called
+# `staging-compose`. You can create one like this:
+# `alias staging-compose="docker-compose --file docker-compose.yml --file staging-compose.yml"`
+# our apps:
+version: "3.7"
 
 services:
-  mysql:
-    extends:
-      file: common-services.yml
-      service: mysql
-    networks: [ "backend" ]
-
-  redis:
-    extends:
-      file: common-services.yml
-      service: redis
-    networks: [ "backend" ]
-
-  migrate: &app_base
-    image: vovimayhem/docker-laravel-demo:latest
+  web:
+    image: vovimayhem/laravel-demo:latest
     build:
       context: .
-      dockerfile: Dockerfile
       target: release
       args:
-      - DEVELOPER_UID=${UID:-1000}
-      - DEVELOPER_USER=${USER:-you}
-    networks: [ "backend" ]
-    command: run-migrations
-    depends_on: [ "mysql", "redis" ]
+        APP_PATH: ${PWD:-/srv/demo}
+        DEVELOPER_UID: ${UID:-1000}
+        DEVELOPER_USER: ${USER:-you}
+    ports:
+      - ${DEMO_WEB_PORT:-3000}:3000
 
     # Keep the stdin open, so we can attach to our app container's process
     # and do things such as byebug, etc:
@@ -43,6 +30,9 @@ services:
     # Enable sending signals (CTRL+C, CTRL+P + CTRL+Q) into the container:
     tty: true
 
+    # Specify environment variables available for our app containers. We'll
+    # leave a YML anchor in case we need to override or add more variables if
+    # needed on each app service:
     environment:
       APP_ENV: production
       APP_DEBUG: 'true'
@@ -70,10 +60,3 @@ services:
       PUSHER_APP_ID:
       PUSHER_KEY:
       PUSHER_SECRET:
-
-  web:
-    <<: *app_base
-    command: start-web
-    networks: [ "backend", "frontend" ]
-    ports:
-    - ${PHP_DEMO_WEB_PORT:-8000}:8000
